[package]
name = "omtdecoder"
version = "0.1.0"
edition = "2021"

[features]
default = ["ffmpeg"]
ffmpeg = []

[dependencies]
libomtnet = { path = "../libomtnet" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
bytes = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
libvmx-sys = { path = "../libvmx-sys" }
libc = "0.2"
nix = { version = "0.29", features = ["ioctl", "mman", "fs"] }
regex-lite = "0.1"
